Fix styling issues on mobile

--- a/example-style.css
+++ b/example-style.css
@@ -1,5 +1,7 @@
 body {
     font-family: "Meiryo", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Osaka", "メイリオ", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+    font-size: 100%;
+    line-height: 1.8em;
 }
 #canvas-table {
     display: table;
